DynamicImageTranscoder: Use Java 8-compatible APIs and syntax
+   Drop unnecessary @SuppressWarnings("resource")

    Wonder if Eclipse's "Potential resource leak" report is any good.